traefik-ingress/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`www.nickdevops.com`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80

---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: ingressroutetls
#   namespace: kube-system
# spec:
#   entryPoints:
#     - websecure
#   routes:
#   - match: Host(`www.nickdevops.com`) && PathPrefix(`/tls`)
#     kind: Rule
#     services:
#     - name: whoami
#       port: 80
#   tls:
#     certResolver: myresolver
